# fairlady

./: .gitignore  Cargo.toml  DEV_DIARY.md  IFF_spec.md  LICENSE  README.md  docker-compose.yml  generate_data.sh  legacy_readme.md  requirements.txt  run_telemetry.sh  telemetry.py
client/: Cargo.toml
client/src/: client_utils.rs  dispatcher.rs  event_adapter.rs  fs_adapter.rs  fs_handler.rs  main.rs  network_handler.rs  watcher.rs
client/src/workers/: dispatcher.rs  messenger.rs  mod.rs  watcher.rs
commom/: Cargo.toml  constants.rs  database.rs  info.rs  ipfs_adapter.rs  kubo.rs  lib.rs
core/: Cargo.toml
core/src/: constants.rs  fs_handler.rs  lib.rs  logger.rs  nimbus_protocol.rs
core/src/errors/: client_err.rs  mod.rs
daemon/: Cargo.toml  Dockerfile.dev
daemon/src/: cli.rs  dispatcher.rs  main.rs  startup.rs  watcher.rs
daemon/src/events/: cli.rs  dispatcher.rs  fs.rs  mod.rs
glifo/: Cargo.toml  credentials.rs  encrypter.rs  lib.rs
kubo_node/: Dockerfile  init-config.sh
server/: Cargo.toml
server/src/: dispatcher.rs  main.rs  messenger.rs
src/: constants.rs  main.rs  types.rs
src/error/: types.rs
src/server/: listener.rs
