#Copyright (C) 2025-2026 Yohan Lopes Rodrigues. AGPLv3 license.
[workspace]
members = ["glifo", "daemon"]
resolver = "3"

[workspace.package]
authors = ["Yohan Lopes R."]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/YoYolops/fairlady"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2"
tokio = { version = "1.47.1", features = ["full"] }
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand_core = { version = "0.10" }
rand = { version = "0.10" }
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.11"