#Copyright (C) 2025-2026 Yohan Lopes Rodrigues. AGPLv3 license.
[workspace]
members = ["glifo", "daemon", "commom"]
resolver = "3"

[workspace.package]
authors = ["Yohan Lopes R."]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/YoYolops/fairlady"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2"
tokio = { version = "1.47.1", features = ["full"] }
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
aes-gcm = "0.10"
sha2 = "0.11"
tar = "0.4"