#Copyright (C) 2025-2026 Yohan Lopes Rodrigues. AGPLv3 license.
[workspace]
members = ["glifo", "daemon", "commom"]
resolver = "3"

[workspace.package]
authors = ["Yohan Lopes R."]
edition = "2024"
license = "AGPLv3"
repository = "https://github.com/YoYolops/fairlady"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2"
tokio = { version = "1.47.1", features = ["full"] }
pkcs8 = { version = "0.11", features = ["pem"] }
aes-gcm = "0.10"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["multipart", "json", "query"] }
compactly = "0.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }