[package]
name = "glifo"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
commom = { path = "../commom" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pkcs8 = { workspace = true }
aes = { workspace = true }
tar = { workspace = true }
compactly = { workspace = true }
bytes = { workspace = true }
chacha20 = { workspace = true }
ctr = { workspace = true }
twofish = { workspace = true }
serpent = { workspace = true }
rand_core = { workspace = true }